# youbot

./: .gitmodules  README.md  cmd_vel_bash.md  put-box  requirements.txt  robot_dynamics.ipynb  run-demo  run-gazebo-model  run-sim  run-simple-ilqr  run-trajopt
.ipynb_checkpoints/: robot_dynamics-checkpoint.ipynb
gazebo_laser_processing/src/: laser_processor.cpp
gazebo_trajectory_commander/: CMakeLists.txt  package.xml
image_processor/: CMakeLists.txt  package.xml
image_processor/src/: image_processor.cpp
laser_processor/: CMakeLists.txt  package.xml
laser_processor/src/: laser_processor.cpp
youbot/: README.md  cmd_vel_bash.md  package.xml  run-gazebo-model  run-goal-nav  run-navstack  run-simple-ilqr
youbot/.ipynb_checkpoints/: robot_dynamics-checkpoint.ipynb
youbot/gazebo_laser_processing/: CMakeLists.txt  package.xml
youbot/gazebo_trajectory_commander/: CMakeLists.txt  package.xml
youbot/gazebo_trajectory_commander/src/: gazebo_trajectory_commander.cpp  nav_target.cpp  simple_ilqr.cpp
youbot/youbot/: CMakeLists.txt  package.xml
youbot/youbot_description/robots/: youbot.urdf.xacro
youbot/youbot_description/urdf/sensors/: kinect_camera.gazebo.xacro
youbot/youbot_description/urdf/youbot_obstacle/: obstacle.urdf.xacro
youbot/youbot_navigation/: CMakeLists.txt  iros18.m  iros18.m~  package.xml
youbot/youbot_navigation/config/: config.py  rviz.rviz
youbot/youbot_navigation/cost_params/: base_local_planner_params.yaml  local_costmap_params.yaml
youbot/youbot_navigation/data/: time.txt  trajectory.txt
youbot/youbot_navigation/maps/: slalom_map.yaml
youbot/youbot_navigation/scripts/: algorithm_ilqr.py  config.py
youbot/youbot_navigation/scripts/algorithm_utils/: agent_utils.py  unused.py
youbot/youbot_navigation/scripts/sample/: __init__.py  sample.py  sample_list.py
youbot/youbot_navigation/scripts/services/: __init__.py  wrench.sh
youbot/youbot_navigation/src/: nav_target.cpp
youbot/youbot_simulation/youbot_gazebo_worlds/launch/: robocup_at_work_2012.launch
youbot/youbot_simulation/youbot_gazebo_worlds/urdf/: robocup_at_work_2012.urdf
youbot_description/robots/: youbot.urdf.xacro
youbot_description/urdf/sensors/: kinect_camera.gazebo.xacro  kinect_camera.urdf.xacro
youbot_description/urdf/youbot_base/: base.urdf.xacro
youbot_description/urdf/youbot_obstacle/: obstacle.gazebo.xacro  obstacle.launch  obstacle.urdf  obstacle.urdf.xacro
youbot_navigation/: CMakeLists.txt  iros18.m  iros18.m~  package.xml
youbot_navigation/config/: coke_can.sdf
youbot_navigation/cost_params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  movebase_params.yaml
youbot_navigation/data/: quadratized_cost.txt  time.txt  traj.fig  trajectory.txt
youbot_navigation/html/: iros18.html
youbot_navigation/launch/: move_base.launch  trajectory.launch
youbot_navigation/maps/: slalom_map2.yaml
youbot_navigation/scripts/: __init__.py  config.py  constants.py  dynamics.py  idg_main.py  nav_ilqr.py  odom_receiver.py  sample.py  torque.py  traj_opt.py
youbot_navigation/scripts/algorithm_utils/: __init__.py  agent_utils.py  conv_model.py  unused.py
youbot_navigation/scripts/costs/: __init__.py  config.py  cost.py  cost_action.py  cost_state.py  cost_sum.py
youbot_navigation/scripts/dynamics/: dynamics.py  dynamics.py.bak
youbot_navigation/scripts/policy/: policy.py
youbot_navigation/scripts/services/: joints_client.py  joints_service.py  wrench.sh
youbot_navigation/scripts/subscribers/: __init__.py  image_sub.py  images_subscriber.py  laser_clouds.py  model_states.py
youbot_navigation/src/: nav_target.cpp
youbot_simulation/youbot_gazebo_robot/launch/: youbot.launch  youbot_laser_assembler.launch
youbot_simulation/youbot_gazebo_worlds/launch/: robocup_at_work_2012.launch
youbot_simulation/youbot_gazebo_worlds/urdf/: robocup_at_work_2012.urdf
youbot_trajectory_commander/: CMakeLists.txt
youbot_trajectory_commander/src/: simple_ilqr.cpp  trajectory_commader.cpp
