<?xml version="1.0"?>
<package>
	<name>youbot</name>
	<version>0.0.0</version>
	<description>
		youbot simulator
	</description>

	<maintainer email="olalekan.ogunmolu@utdallas.edu">Olalekan Ogunmolu</maintainer>
  	<license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>youbot_description</run_depend>
    <run_depend>youbot_gazebo_publisher</run_depend>
    <run_depend>youbot_simulation</run_depend>

  <export>
    <metapackage/>
  </export>

</package>