<?xml version="1.0"?>
<package>
	<name>youbot</name>
	<version>0.0.0</version>
	<description>
		youbot simulator
	</description>

	<maintainer email="olalekan.ogunmolu@utdallas.edu">Olalekan Ogunmolu</maintainer>
  	<license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>youbot_description</run_depend>
    <run_depend>gazebo_trajectory_commander</run_depend>
    <run_depend>youbot_simulation</run_depend>
    <run_depend>youbot_navigation</run_depend>
    <run_depend>laser_processor</run_depend>
    <run_depend>teleop_twist_keyboard</run_depend>


  <export>
    <metapackage/>
  </export>

</package>
